fixed issue where content would get cut off if there was an extra header above the content_scroller a little more detail in the rewards and permissions sections.

--- a/css/app.css
+++ b/css/app.css
@@ -228,6 +228,7 @@ transition: 400ms ease-in all;
 
 .scroller_wrapper.with_header_padding {
   padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .scroller_wrapper {
